[package]
name = "RobotIKNative"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "robot_ik_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
robot_ik_base = { path = "../RobotIKBase" }
libc = "0"
optimization_engine = "0.6.0"
nalgebra = "0.26"
k = "0.25"

[profile.release]
opt-level = 3
